--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "script": "nodemon app.js",
-    "dev": "nodemon app.js"
+    "start": "node app.js",
+    "server": "nodemon app.js",
+    "client": "cd .. && cd client && npm run dev",
+    "server-install": "npm install",
+    "client-install": "cd client && npm install",
+    "install-all": "concurrently \"npm run server-install\" \"npm run client-install\"",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "nagakumar",
   "license": "ISC",
@@ -14,5 +19,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.0"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
